@@ -22,6 +22,8 @@
 #include "folderCache.h"
 #include "binFolderCache.h"
 
+#include "authorship.h"
+
 
 
 static int mapSize;
@@ -536,7 +538,8 @@ float initSpriteBankStep() {
             r->sha1Hash = NULL;
             
             r->tag = NULL;
-
+            r->authorTag = NULL;
+            
             r->centerXOffset = 0;
             r->centerYOffset = 0;
         
@@ -580,7 +583,20 @@ float initSpriteBankStep() {
                     sscanf( tokens->getElementDirect( 3 ),
                             "%d", &( r->centerAnchorYOffset ) );
                     }
+                
+                if( numTokens >=5 ) {
+                    char authorTagBuffer[100];
             
+                    authorTagBuffer[0] = '\0';
+
+                    sscanf( tokens->getElementDirect( 4 ), 
+                            "author=%99s", authorTagBuffer );
+            
+                    if( strlen( authorTagBuffer ) > 0 ) {
+                        r->authorTag = stringDuplicate( authorTagBuffer );
+                        }
+                    }
+
 
                 tokens->deallocateStringElements();
                 delete tokens;
@@ -804,6 +820,10 @@ static void freeSpriteRecord( int inID ) {
                 delete [] idMap[inID]->sha1Hash;    
                 }
             
+            if( idMap[inID]->authorTag != NULL ) {
+                delete [] idMap[inID]->authorTag;
+                }
+
             delete idMap[inID];
             idMap[inID] = NULL;
             
@@ -837,6 +857,10 @@ void freeSpriteBank() {
             
             if( idMap[i]->sha1Hash != NULL ) {
                 delete [] idMap[i]->sha1Hash;    
+                }
+            
+            if( idMap[i]->authorTag != NULL ) {
+                delete [] idMap[i]->authorTag;
                 }
 
             delete idMap[i];
@@ -1229,8 +1253,19 @@ int addSprite( const char *inTag,
                unsigned char *inTGAData, int inTGADataLength, 
                char inMultiplicativeBlending,
                int inCenterAnchorXOffset,
-               int inCenterAnchorYOffset ) {
+               int inCenterAnchorYOffset,
+               const char *inAuthorTag ) {
 
+    char *authorTag = NULL;
+    
+    if( inAuthorTag != NULL ) {
+        authorTag = stringDuplicate( inAuthorTag );
+        }
+    else {
+        authorTag = getAuthorHash();
+        }
+    
+    
     int newID = maxLiveSpriteID + 1;
 
     if( newID >= mapSize ) {
@@ -1268,9 +1303,11 @@ int addSprite( const char *inTag,
     r->centerAnchorXOffset = inCenterAnchorXOffset;
     r->centerAnchorYOffset = inCenterAnchorYOffset;
     r->hitMap = NULL;
-    
     r->noFlip = false;
+    
+    r->authorTag = authorTag;
                     
+    
     if( strstr( r->tag, "NoFlip" ) != NULL ) {
         r->noFlip = true;
         }
@@ -1321,7 +1358,18 @@ int addSprite( const char *inTag, SpriteHandle inSprite,
                Image *inSourceImage,
                char inMultiplicativeBlending,
                int inCenterAnchorXOffset,
-               int inCenterAnchorYOffset ) {
+               int inCenterAnchorYOffset,
+               const char *inAuthorTag ) {
+
+    char *authorTag = NULL;
+    
+    if( inAuthorTag != NULL ) {
+        authorTag = stringDuplicate( inAuthorTag );
+        }
+    else {
+        authorTag = getAuthorHash();
+        }
+    
 
     int maxD = inSourceImage->getWidth();
     
@@ -1389,9 +1437,11 @@ int addSprite( const char *inTag, SpriteHandle inSprite,
             multFlag = 1;
             }
         
-        char *metaContents = autoSprintf( "%s %d %d %d", inTag, multFlag,
+        char *metaContents = autoSprintf( "%s %d %d %d author=%s", 
+                                          inTag, multFlag,
                                           inCenterAnchorXOffset, 
-                                          inCenterAnchorYOffset );
+                                          inCenterAnchorYOffset,
+                                          authorTag );
 
         metaFile->writeToFile( metaContents );
         
@@ -1413,8 +1463,12 @@ int addSprite( const char *inTag, SpriteHandle inSprite,
         delete nextNumberFile;
         }
     
+
     if( newID == -1 ) {
         // failed to save it to disk
+        
+        delete [] authorTag;
+
         return -1;
         }
 
@@ -1452,6 +1506,7 @@ int addSprite( const char *inTag, SpriteHandle inSprite,
     r->sha1Hash = NULL;
     r->maxD = maxD;
     r->multiplicativeBlend = inMultiplicativeBlending;
+    r->authorTag = authorTag;
     
 
     r->w = inSourceImage->getWidth();
